--- a/execircios/ex007/index.html
+++ b/execircios/ex007/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formatação de texto</title>
+    <title>Formatação de Texto</title>
 </head>
 <body>
     <h1>Principais formas de Formatação</h1>
