--- a/execircios/ex022/fundo006.html
+++ b/execircios/ex022/fundo006.html
@@ -8,16 +8,20 @@
     <style>
 
         body{
-            background-color: black;
-            background-image: url('imagens/wallpaper002.jpg');
-            background-repeat: no-repeat;
+            
+            background: black url('imagens/wallpaper002.jpg') center no-repeat fixed;
             background-size: cover;
+
             height: 100vh;
+
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 1.2em;
+
         }
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 700px;
             margin:  50px auto auto auto;
             padding: 20px;
             border: 2px solid black;
@@ -35,6 +39,38 @@
         <p>
 
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam non eligendi, iste maiores nulla tempora dolore quidem dignissimos nam illum, esse pariatur a laudantium laboriosam similique. Soluta qui doloremque fugit!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id fugiat nesciunt expedita quia quam eveniet perspiciatis, consequatur placeat atque sunt illo voluptatum iste! Magni, in ex provident iste unde placeat!
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci temporibus, ducimus iusto ipsam sunt necessitatibus ut consectetur optio aspernatur excepturi ex aliquid sit repellat ipsa repellendus. Voluptas suscipit illo aut.Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam non eligendi, iste maiores nulla tempora dolore quidem dignissimos nam illum, esse pariatur a laudantium laboriosam similique. Soluta qui doloremque fugit!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id fugiat nesciunt expedita quia quam eveniet perspiciatis, consequatur placeat atque sunt illo voluptatum iste! Magni, in ex provident iste unde placeat!
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci temporibus, ducimus iusto ipsam sunt necessitatibus ut consectetur optio aspernatur excepturi ex aliquid sit repellat ipsa repellendus. Voluptas suscipit illo aut.Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam non eligendi, iste maiores nulla tempora dolore quidem dignissimos nam illum, esse pariatur a laudantium laboriosam similique. Soluta qui doloremque fugit!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id fugiat nesciunt expedita quia quam eveniet perspiciatis, consequatur placeat atque sunt illo voluptatum iste! Magni, in ex provident iste unde placeat!
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci temporibus, ducimus iusto ipsam sunt necessitatibus ut consectetur optio aspernatur excepturi ex aliquid sit repellat ipsa repellendus. Voluptas suscipit illo aut.Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam non eligendi, iste maiores nulla tempora dolore quidem dignissimos nam illum, esse pariatur a laudantium laboriosam similique. Soluta qui doloremque fugit!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id fugiat nesciunt expedita quia quam eveniet perspiciatis, consequatur placeat atque sunt illo voluptatum iste! Magni, in ex provident iste unde placeat!
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci temporibus, ducimus iusto ipsam sunt necessitatibus ut consectetur optio aspernatur excepturi ex aliquid sit repellat ipsa repellendus. Voluptas suscipit illo aut.Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam non eligendi, iste maiores nulla tempora dolore quidem dignissimos nam illum, esse pariatur a laudantium laboriosam similique. Soluta qui doloremque fugit!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id fugiat nesciunt expedita quia quam eveniet perspiciatis, consequatur placeat atque sunt illo voluptatum iste! Magni, in ex provident iste unde placeat!
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci temporibus, ducimus iusto ipsam sunt necessitatibus ut consectetur optio aspernatur excepturi ex aliquid sit repellat ipsa repellendus. Voluptas suscipit illo aut.Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam non eligendi, iste maiores nulla tempora dolore quidem dignissimos nam illum, esse pariatur a laudantium laboriosam similique. Soluta qui doloremque fugit!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id fugiat nesciunt expedita quia quam eveniet perspiciatis, consequatur placeat atque sunt illo voluptatum iste! Magni, in ex provident iste unde placeat!
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci temporibus, ducimus iusto ipsam sunt necessitatibus ut consectetur optio aspernatur excepturi ex aliquid sit repellat ipsa repellendus. Voluptas suscipit illo aut.Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam non eligendi, iste maiores nulla tempora dolore quidem dignissimos nam illum, esse pariatur a laudantium laboriosam similique. Soluta qui doloremque fugit!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id fugiat nesciunt expedita quia quam eveniet perspiciatis, consequatur placeat atque sunt illo voluptatum iste! Magni, in ex provident iste unde placeat!
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci temporibus, ducimus iusto ipsam sunt necessitatibus ut consectetur optio aspernatur excepturi ex aliquid sit repellat ipsa repellendus. Voluptas suscipit illo aut.Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam non eligendi, iste maiores nulla tempora dolore quidem dignissimos nam illum, esse pariatur a laudantium laboriosam similique. Soluta qui doloremque fugit!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id fugiat nesciunt expedita quia quam eveniet perspiciatis, consequatur placeat atque sunt illo voluptatum iste! Magni, in ex provident iste unde placeat!
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci temporibus, ducimus iusto ipsam sunt necessitatibus ut consectetur optio aspernatur excepturi ex aliquid sit repellat ipsa repellendus. Voluptas suscipit illo aut.Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam non eligendi, iste maiores nulla tempora dolore quidem dignissimos nam illum, esse pariatur a laudantium laboriosam similique. Soluta qui doloremque fugit!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id fugiat nesciunt expedita quia quam eveniet perspiciatis, consequatur placeat atque sunt illo voluptatum iste! Magni, in ex provident iste unde placeat!
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci temporibus, ducimus iusto ipsam sunt necessitatibus ut consectetur optio aspernatur excepturi ex aliquid sit repellat ipsa repellendus. Voluptas suscipit illo aut.Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam non eligendi, iste maiores nulla tempora dolore quidem dignissimos nam illum, esse pariatur a laudantium laboriosam similique. Soluta qui doloremque fugit!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id fugiat nesciunt expedita quia quam eveniet perspiciatis, consequatur placeat atque sunt illo voluptatum iste! Magni, in ex provident iste unde placeat!
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci temporibus, ducimus iusto ipsam sunt necessitatibus ut consectetur optio aspernatur excepturi ex aliquid sit repellat ipsa repellendus. Voluptas suscipit illo aut.Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam non eligendi, iste maiores nulla tempora dolore quidem dignissimos nam illum, esse pariatur a laudantium laboriosam similique. Soluta qui doloremque fugit!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id fugiat nesciunt expedita quia quam eveniet perspiciatis, consequatur placeat atque sunt illo voluptatum iste! Magni, in ex provident iste unde placeat!
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci temporibus, ducimus iusto ipsam sunt necessitatibus ut consectetur optio aspernatur excepturi ex aliquid sit repellat ipsa repellendus. Voluptas suscipit illo aut.Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam non eligendi, iste maiores nulla tempora dolore quidem dignissimos nam illum, esse pariatur a laudantium laboriosam similique. Soluta qui doloremque fugit!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id fugiat nesciunt expedita quia quam eveniet perspiciatis, consequatur placeat atque sunt illo voluptatum iste! Magni, in ex provident iste unde placeat!
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci temporibus, ducimus iusto ipsam sunt necessitatibus ut consectetur optio aspernatur excepturi ex aliquid sit repellat ipsa repellendus. Voluptas suscipit illo aut.Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam non eligendi, iste maiores nulla tempora dolore quidem dignissimos nam illum, esse pariatur a laudantium laboriosam similique. Soluta qui doloremque fugit!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id fugiat nesciunt expedita quia quam eveniet perspiciatis, consequatur placeat atque sunt illo voluptatum iste! Magni, in ex provident iste unde placeat!
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci temporibus, ducimus iusto ipsam sunt necessitatibus ut consectetur optio aspernatur excepturi ex aliquid sit repellat ipsa repellendus. Voluptas suscipit illo aut.Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam non eligendi, iste maiores nulla tempora dolore quidem dignissimos nam illum, esse pariatur a laudantium laboriosam similique. Soluta qui doloremque fugit!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id fugiat nesciunt expedita quia quam eveniet perspiciatis, consequatur placeat atque sunt illo voluptatum iste! Magni, in ex provident iste unde placeat!
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci temporibus, ducimus iusto ipsam sunt necessitatibus ut consectetur optio aspernatur excepturi ex aliquid sit repellat ipsa repellendus. Voluptas suscipit illo aut.Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam non eligendi, iste maiores nulla tempora dolore quidem dignissimos nam illum, esse pariatur a laudantium laboriosam similique. Soluta qui doloremque fugit!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id fugiat nesciunt expedita quia quam eveniet perspiciatis, consequatur placeat atque sunt illo voluptatum iste! Magni, in ex provident iste unde placeat!
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci temporibus, ducimus iusto ipsam sunt necessitatibus ut consectetur optio aspernatur excepturi ex aliquid sit repellat ipsa repellendus. Voluptas suscipit illo aut.Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam non eligendi, iste maiores nulla tempora dolore quidem dignissimos nam illum, esse pariatur a laudantium laboriosam similique. Soluta qui doloremque fugit!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id fugiat nesciunt expedita quia quam eveniet perspiciatis, consequatur placeat atque sunt illo voluptatum iste! Magni, in ex provident iste unde placeat!
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci temporibus, ducimus iusto ipsam sunt necessitatibus ut consectetur optio aspernatur excepturi ex aliquid sit repellat ipsa repellendus. Voluptas suscipit illo aut.Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam non eligendi, iste maiores nulla tempora dolore quidem dignissimos nam illum, esse pariatur a laudantium laboriosam similique. Soluta qui doloremque fugit!
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Id fugiat nesciunt expedita quia quam eveniet perspiciatis, consequatur placeat atque sunt illo voluptatum iste! Magni, in ex provident iste unde placeat!
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci temporibus, ducimus iusto ipsam sunt necessitatibus ut consectetur optio aspernatur excepturi ex aliquid sit repellat ipsa repellendus. Voluptas suscipit illo aut.
 
